<resources>
    <string name="app_name">VidTube</string>
    <string name="video_image">Video Image</string>
    <string name="author_image">Author Image</string>
    <string name="video_title">Video Title</string>
    <string name="channel_name">Channel Name</string>
    <string name="space_details">\u00A0-\u00A0</string>
    <string name="views">Views</string>
    <string name="upload_time">Upload time</string>
    <string name="menu_button">Menu Button</string>
    <string name="search_button">Search Button</string>
    <string name="theme_mode">Dark Mode</string>
    <string name="toggle_theme_icon">Toggle Theme Icon</string>
    <string name="sign_up_icon">Sign Up Icon</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_icon">Sign In Icon</string>
    <string name="history">History</string>
    <string name="history_icon">History Icon</string>
    <string name="you">You</string>
    <string name="you_icon">You Icon</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscriptions_icon">Subscriptions Icon</string>
    <string name="shorts">Shorts</string>
    <string name="shorts_icon">Shorts Icon</string>
    <string name="home">Home</string>
    <string name="home_icon">Home Icon</string>
    <string name="upload_my_video_to_vidtube">Upload To VidTube</string>
    <string name="upload_video_thumbnail">Upload Thumbnail</string>
    <string name="upload_video_file">Upload Video</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="please_fill_all_fields_to_upload">Please fill all fields to upload.</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="upload_video">Upload Video</string>
    <string name="video_successfully_uploaded">Video Successfully Uploaded.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="please_choose_a_profile_picture">Please choose a profile picture.</string>
    <string name="display_name">Display Name</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_vidtube">Sign Up to VidTube:</string>
    <string name="image_successfully_uploaded">Image successfully uploaded.</string>
    <string name="password_must_have_at_least_8_characters_1_uppercase_1_lowercase_1_number_and_1_special_character">Password must have at least 8 characters, 1 uppercase, 1 lowercase, 1 number, and 1 special character.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="logo">Logo</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="edit_video">Edit Video</string>
    <string name="title_in_edit">Title</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="thumbnail_icon">Thumbnail Icon</string>
    <string name="upload_thumbnail">Upload Thumbnail</string>
    <string name="video_details">Video Details</string>
    <string name="video_icon">Video Icon</string>
    <string name="submit_icon">Submit Icon</string>
    <string name="update_video">Update Video</string>
    <string name="cancel_icon">Cancel Icon</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="sign_out_icon">Sign Out Icon</string>
    <string name="sign_out">Sign Out</string>
    <string name="upload_icon">Upload Icon</string>
    <string name="profile_image">Profile Image</string>
    <string name="video_author_views_uploadtime">%1$s - %2$s views - %3$s</string>
    <string name="take_photo">Take Photo</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_your_details">Edit Your Details</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="user_videos_icon_text">user_videos_icon</string>
    <string name="user_s_videos">User\'s Videos</string>
    <string name="author_name_description">author_name_description</string>
    <string name="like_button_description">Like</string>
    <string name="dislike_button_description">Dislike</string>
</resources>