<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Logo at the top -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="212dp"
            android:layout_height="106dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logovidtube" />

        <!-- Header with icon and text centered and larger -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/edit_icon"
                android:src="@drawable/ic_edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/edit_video"
                android:textColor="@color/colorText"
                android:textSize="24sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/title_in_edit"
            android:textSize="20sp"
            android:inputType="text"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:textColor="@color/colorText" />

        <ImageView
            android:id="@+id/imageViewThumbnail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/thumbnail_icon"
                android:src="@drawable/ic_thumbnail" /> <!-- Replace with your thumbnail icon resource -->

            <Button
                android:id="@+id/buttonUploadThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/editPageButtons"
                android:text="@string/upload_thumbnail"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewVideoDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/video_details"
            android:textColor="@color/colorText"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/video_icon"
                android:src="@drawable/ic_video_upload" />

            <Button
                android:id="@+id/buttonUploadVideo"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/editPageButtons"
                android:text="@string/upload_video"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/submit_icon"
                android:src="@drawable/ic_submit" /> <!-- Replace with your submit icon resource -->

            <Button
                android:id="@+id/buttonSubmitVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/editButtonColor"
                android:text="@string/update_video"
                android:textColor="@color/colorText" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/cancel_icon"
                android:src="@drawable/ic_cancel"
                android:layout_marginStart="16dp"/> <!-- Replace with your cancel icon resource -->

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/deleteButtonColor"
                android:text="@string/cancel"
                android:textColor="@color/colorText" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
