<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".UploadVideo">

    <ImageView
        android:id="@+id/imageViewThumbnail"
        android:layout_width="314dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/video_thumbnail"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonUploadVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonUploadThumbnail"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="380dp"
        android:layout_height="62dp"
        android:layout_marginTop="104dp"
        android:hint="@string/title"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonUploadThumbnail"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#818B8E"
        android:text="@string/upload_video_thumbnail"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle" />

    <Button
        android:id="@+id/buttonUploadVideo"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="116dp"
        android:backgroundTint="#818B8E"
        android:text="@string/upload_video_file"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUploadThumbnail" />

    <Button
        android:id="@+id/buttonSubmitVideo"
        android:layout_width="315dp"
        android:layout_height="65dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/upload_my_video_to_vidtube"
        android:textColor="@color/colorText"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUploadVideo"
        app:layout_constraintVertical_bias="0.851" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="Cancel"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewVideoDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_successfully_uploaded"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUploadVideo" />

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_all_fields_to_upload"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmitVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVideoDetails"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/textViewPageTitle"
        android:layout_width="283dp"
        android:layout_height="51dp"
        android:drawableLeft="@drawable/ic_upload"
        android:drawablePadding="8dp"
        android:text="@string/upload_video"
        android:textColor="@color/colorText"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />


</androidx.constraintlayout.widget.ConstraintLayout>
