<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/videoImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/video_title"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/video_info_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/video_info_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:src="@drawable/img1"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoImage">

        <androidx.cardview.widget.CardView
            android:id="@+id/videoAuthorImageCard"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/videoAuthorImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/author_image"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/videoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_title"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/videoAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/channel_name"
                    android:textColor="#606060"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space_details"
                    android:textColor="#606060"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/videoViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/views"
                    android:textColor="#606060"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space_details"
                    android:textColor="#606060"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/videoUploadTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_time"
                    android:textColor="#606060"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_edit"
            android:text="@string/edit"
            android:backgroundTint="@color/editButtonColor"
            android:layout_marginEnd="8dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_delete"
            android:text="@string/delete"
            android:backgroundTint="@color/deleteButtonColor"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
